kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
spec:
  ingressClassName: nginx
  rules:
    - host: arkarsg.split
      http:
        paths:
          - path: /db
            pathType: Prefix
            backend:
              service:
                name: adminer
                port:
                  number: 8080
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: split-api-service
                port:
                  number: 8000
